# rstrader

./: .dockerignore  .gitignore  CLAUDE.md  COMPREHENSIVE_XTRADER_ANALYSIS_REPORT_2025.md  Cargo.toml  Dockerfile  PERFORMANCE_OPTIMIZATIONS_IMPLEMENTED.md  README.md  XTRADER_CODEBASE_ANALYSIS_REPORT.md  md_collector.yaml  naive_mm.yaml  report.md
.github/workflows/: docker-publish.yml
benches/: monoseq_bench.rs
binanance_keys/: id_ed25519  id_ed25519.pub
docs/: # Stream latency arbitrage.md  ACCOUNT_STATE_DISCONNECTS.md  ARCH_DESIGN_PERF_REVIEW.md  ARCH_PERF_REVIEW.md  BINANCE_API_RESEARCH_REPORT.md  DEPLOYMENT.md  METRICS.md  OVERVIEW.md  QUESTDB_SINK_IMPLEMENTATION.md  UNIFIED_STRATEGY_API.md  code_structure.md  data_schema.md  naive_mm_strat.md  naive_mm_tech_debt.md  oms.md  trade_account.md  tradeapi.md  tradelogs_design.md
examples/: binance_wsapi_debug.rs  xmarket_demo.rs
scripts/: docker_entrypoint.sh  pgdb_ctl.sh  questdb_ctl.sh  start_questdb.sh  strat-compose.yaml
sql/: 001_create_trades.sql  002_create_l2_updates.sql
sql/pg/: V1__create_executions.sql  V2__create_tradelog.sql  V3__drop_verbose_trade_columns.sql
sql/questdb/: 001_create_trades.sql  002_create_l2_updates.sql
src/: cli.rs  error.rs  lib.rs  main.rs  subscription_manager.rs  types.rs  xmarket_id.rs
src/app/: env.rs  mod.rs  runtime.rs  subscription_manager.rs
src/exchanges/: binance.rs  binance_account.rs  deribit.rs  mod.rs  okx.rs
src/md/: deduper.rs  latency_arb.rs  mod.rs  orderbook.rs  processor.rs  unified_handler.rs
tests/: questdb_integration.rs  xmarket_id_integration.rs
(+35 files in other folders)
